# ai-orchestration-lab

./: .gitignore  LICENSE  README.md  project-config.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  issue-lifecycle.yml
agents/: auditor_reliability.agent.md  auditor_security.agent.md  auditor_spec.agent.md  implementer.agent.md  orchestrator.agent.md  release_manager.agent.md  test_engineer.agent.md
ci/: policy_check.py
configs/: ai_models.toml
docs/: architecture.md  constraints.md  orchestration.md  plan.md  policies.md  requirements.md  runbook.md
docs/adr/: ADR-0001-parallel-execution-approach.md  ADR-TEMPLATE.md
docs/research/: Copilot Proによる低コストAI問題解決.md  github-ai-orchestration-requirements.md
docs/research/parallel-execution/: README.md  cognitive-task-results.md  (+2 more)
experiments/a2a-protocol/: README.md
experiments/ai-gateway/: README.md
experiments/eval-framework/: README.md
experiments/parallel-execution/: README.md  exp_001_fanout_fanin.py  exp_002_worker_scaling.py  exp_003_evaluation_framework.py  exp_004_langgraph_fanout.py  exp_005_sequential_vs_parallel.py  exp_006_cognitive_task_benchmark.py
experiments/typed-orchestration/: README.md
notebooks/: README.md
scripts/: init_packages.sh  update_agent_models.sh
src/orchestration_lab/: __init__.py
tests/: conftest.py  test_parallel_types.py
tests/unit/: test_exceptions.py  test_exp_004_langgraph_fanout.py  test_exp_005_benchmark.py  test_exp_006_cognitive_task.py  test_parallel_types.py  test_types.py
(+6 files in other folders)
