[project]
name = "ai-orchestration-lab"
version = "0.1.0"
description = "AI エージェントオーケストレーションの研究・検証・実装ラボ"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# 型安全オーケストレーション研究用
orchestration = [
    "langgraph>=0.2.0",
    "pydantic>=2.0",
    "pydantic-ai>=0.1.0",
]
# Eval フレームワーク研究用
eval = [
    "promptfoo>=0.1.0",
]
# AI Gateway 研究用
gateway = [
    "litellm>=1.0.0",
]
# 可観測性
observability = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
# 全研究依存を一括インストール
all = [
    "ai-orchestration-lab[orchestration,eval,gateway,observability,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
